fixed spacing issues on mobile (4)

--- a/index.css
+++ b/index.css
@@ -20,7 +20,6 @@
     @apply md:text-3xl;
     @apply font-mono;
     @apply pb-1;
-    @apply md:pb-0;
   }
 
   a {
